--- a/single.html
+++ b/single.html
@@ -15,13 +15,13 @@
 				<!-- Container wrapper -->
 				<div class="container-fluid">
 					<!-- Navbar brand -->
-					<a class="navbar-brand" href="#">asakew.pro</a>
+					<a class="navbar-brand" href="/">asakew.pro</a>
 					<!-- Toggle button -->
-					<button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarTop" aria-controls="navbarTop" aria-expanded="false" aria-label="Toggle navigation">
 					<i class="fas fa-bars"></i>
 					</button>
 					<!-- Collapsible wrapper -->
-					<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<div class="collapse navbar-collapse" id="navbarTop">
 						<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 							<!-- Link -->
 							<li class="nav-item">
