--- a/single.html
+++ b/single.html
@@ -57,7 +57,7 @@
 		<div class="container-fluid">
 			
 			<div class="row">
-				<div class="col-sm-12 col-md-8">
+				<div class="col-md-8 col-sm-12">
 					<article>
 						<h2>Lorem ipsum dolor sit amet, consectetur, adipisicing elit. Ullam numquam blanditiis rerum.	</h2>
 						<figure class="figure">
@@ -73,7 +73,7 @@
 						</div>
 					</article>
 				</div>
-				<aside class="col-sm-12 col-md-4 ">
+				<aside class="col-md-4 col-sm-12">
 					Lorem ipsum, dolor sit amet consectetur, adipisicing elit. Enim ullam, ducimus necessitatibus molestias aspernatur magni recusandae iusto quod neque pariatur eaque maxime nemo, mollitia, aliquam excepturi labore sapiente adipisci maiores!
 					<p class="sticky-top">ads</p>
 				</aside>
@@ -112,7 +112,7 @@
 				<section class="">
 					<!--Grid row-->
 					<div class="row">
-						<div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+						<div class="col-lg-3 col-sm-6 mb-4">
 							<h5 class="text-uppercase">Haqida</h5>
 							<ul class="list-unstyled mb-0">
 								<li>
@@ -135,7 +135,7 @@
 								</li>
 							</ul>
 						</div>
-						<div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+						<div class="col-lg-3 col-sm-6 mb-4">
 							<h5 class="text-uppercase">Hissa qo'shish</h5>
 							<ul class="list-unstyled mb-0">
 								<li>
@@ -155,7 +155,7 @@
 								</li>
 							</ul>
 						</div>
-						<div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+						<div class="col-lg-3 col-sm-6 mb-4">
 							<h5 class="text-uppercase">Bo'limlar</h5>
 							<ul class="list-unstyled mb-0">
 								<li>
@@ -172,7 +172,7 @@
 								</li>
 							</ul>
 						</div>
-						<div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+						<div class="col-lg-3 col-sm-6 mb-4">
 							<h5 class="text-uppercase">Tegs</h5>
 							<ul class="list-unstyled mb-0">
 								<li>
