--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 		</header>
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-sm-12 col-md-8">
+				<div class="col-md-8 col-sm-12">
 					<main class="row row-cols-1 row-cols-md-3 g-3">
-						<div class="col-sm-6 col-lg-4">
+						<div class="col-lg-4 col-sm-6">
 							<article class="card h-100">
 								<div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
 									<img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/111.jpg" class="img-fluid" />
@@ -78,7 +78,7 @@
 								<div class="card-footer text-muted"><span class="badge text-muted">2 days ago</span></div>
 							</div>
 						</article>
-						<div class="col-sm-6 col-lg-4">
+						<div class="col-lg-4 col-sm-6">
 							<article class="card h-100">
 								<div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
 									<img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/111.jpg" class="img-fluid" />
@@ -92,7 +92,7 @@
 								<div class="card-footer text-muted"><span class="badge text-muted">2 days ago</span></div>
 							</div>
 						</article>
-						<div class="col-sm-6 col-lg-4">
+						<div class="col-lg-4 col-sm-6">
 							<article class="card h-100">
 								<div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
 									<img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/111.jpg" class="img-fluid" />
@@ -106,7 +106,7 @@
 								<div class="card-footer text-muted"><span class="badge text-muted">2 days ago</span></div>
 							</div>
 						</article>
-						<div class="col-sm-6 col-lg-4">
+						<div class="col-lg-4 col-sm-6">
 							<article class="card h-100">
 								<div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
 									<img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/111.jpg" class="img-fluid" />
@@ -120,7 +120,7 @@
 								<div class="card-footer text-muted"><span class="badge text-muted">2 days ago</span></div>
 							</div>
 						</article>
-						<div class="col-sm-6 col-lg-4">
+						<div class="col-lg-4 col-sm-6">
 							<article class="card h-100">
 								<div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
 									<img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/111.jpg" class="img-fluid" />
@@ -134,7 +134,7 @@
 								<div class="card-footer text-muted"><span class="badge text-muted">2 days ago</span></div>
 							</article>
 						</div>
-						<div class="col-sm-6 col-lg-4">
+						<div class="col-lg-4 col-sm-6">
 							<article class="card h-100">
 								<div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
 									<img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/111.jpg" class="img-fluid" />
@@ -148,7 +148,7 @@
 								<div class="card-footer text-muted"><span class="badge text-muted">2 days ago</span></div>
 							</div>
 						</article>
-						<div class="col-sm-6 col-lg-4">
+						<div class="col-lg-4 col-sm-6">
 							<article class="card h-100">
 								<div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
 									<img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/111.jpg" class="img-fluid" />
@@ -165,7 +165,7 @@
 					</main>
 					<!-- row -->
 				</div>
-				<aside class="col-sm-12 col-md-4 ">
+				<aside class="col-md-4 col-sm-12 ">
 					Lorem ipsum, dolor sit amet consectetur, adipisicing elit. Enim ullam, ducimus necessitatibus molestias aspernatur magni recusandae iusto quod neque pariatur eaque maxime nemo, mollitia, aliquam excepturi labore sapiente adipisci maiores!
 					<p class="sticky-top">ads</p>
 				</aside>
@@ -204,7 +204,7 @@
 				<section class="">
 					<!--Grid row-->
 					<div class="row">
-						<div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+						<div class="col-lg-3 col-sm-6 mb-4">
 							<h5 class="text-uppercase">Haqida</h5>
 							<ul class="list-unstyled mb-0">
 								<li>
@@ -227,7 +227,7 @@
 								</li>
 							</ul>
 						</div>
-						<div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+						<div class="col-lg-3 col-sm-6 mb-4">
 							<h5 class="text-uppercase">Hissa qo'shish</h5>
 							<ul class="list-unstyled mb-0">
 								<li>
@@ -247,7 +247,7 @@
 								</li>
 							</ul>
 						</div>
-						<div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+						<div class="col-lg-3 col-sm-6 mb-4">
 							<h5 class="text-uppercase">Bo'limlar</h5>
 							<ul class="list-unstyled mb-0">
 								<li>
@@ -264,7 +264,7 @@
 								</li>
 							</ul>
 						</div>
-						<div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+						<div class="col-lg-3 col-sm-6 mb-4">
 							<h5 class="text-uppercase">Tegs</h5>
 							<ul class="list-unstyled mb-0">
 								<li>
