+footer: GitHub repository link

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 			<!-- Copyright -->
 			<div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
 				© 2021 <a href="https://github.com/asakew-pro/asakew-pro.github.com/blob/main/LICENSE">Litsenziya GNU v2</a> /
-				<a class href="https://t.me/s/asakew_portfolio/">asakew</a> / <a href="https://mdbootstrap.com/">MDBootstrap</a> / <a href="https:/wordpress.com/">WordPress</a>
+				<a class href="https://t.me/s/asakew_portfolio/">asakew</a> / <a href="https://mdbootstrap.com/">MDBootstrap</a> / <a href="https:/wordpress.com/">WordPress</a> / <a href="https://github.com/asakew-pro/asakew-pro.github.com">GitHub repository</a>
 			</div>
 			<!-- Copyright -->
 		</footer>
