single-page +Breadcrumbs

--- a/single.html
+++ b/single.html
@@ -59,6 +59,13 @@
 			<div class="row">
 				<div class="col-md-8 col-sm-12">
 					<article>
+						<nav aria-label="breadcrumb">
+							<ol class="breadcrumb">
+								<li class="breadcrumb-item"><a href="#">Home</a></li>
+								<li class="breadcrumb-item"><a href="#">Library</a></li>
+								<li class="breadcrumb-item active" aria-current="page">postTitle 7-bit</li>
+							</ol>
+						</nav>
 						<h2>Lorem ipsum dolor sit amet, consectetur, adipisicing elit. Ullam numquam blanditiis rerum.	</h2>
 						<figure class="figure">
 							<img
