--- a/single-2.html
+++ b/single-2.html
@@ -58,7 +58,7 @@
 			
 			<div class="row">
 				<div class="col-md-2">
-					<p class="sticky-top">ads</p>
+					sidebar
 				</div>
 				<div class="col-md-8 col-sm-12">
 					<article>
@@ -104,7 +104,7 @@
 					</article>
 				</div>
 				<aside class="col-md-2 col-sm-12">
-					<!-- sidebar -->
+					sidebar
 				</aside>
 			</div>
 		</div>
